browser/themes/windows/browser-aero.css
%define WINDOWS_AERO
%include browser.css
%undef WINDOWS_AERO

%define customToolbarColor hsl(210,75%,92%)
%define glassActiveBorderColor rgb(37, 44, 51)
%define glassInactiveBorderColor rgb(102, 102, 102)

@media not all and (-moz-windows-classic) {
  #main-window[sizemode="normal"] > #tab-view-deck > #browser-panel > #navigator-toolbox > #toolbar-menubar {
    margin-top: 1px;
  }

  .panel-promo-message {
    font-style: italic;
  }
}

@media (-moz-windows-default-theme) {
  #navigator-toolbox > toolbar:not(:-moz-lwtheme),
  #browser-bottombox:not(:-moz-lwtheme) {
    background-color: @customToolbarColor@;
  }

  .tab-background-start[selected=true]:not(:-moz-lwtheme)::before,
  .tab-background-end[selected=true]:not(:-moz-lwtheme)::before {
    background-color: @customToolbarColor@;
    background-image: @fgTabTexture@;
  }

  .tab-background-middle[selected=true]:not(:-moz-lwtheme) {
    background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle.png),
                      @fgTabTexture@,
                      linear-gradient(transparent, transparent 2px, @customToolbarColor@ 2px, @customToolbarColor@);
  }

  #navigator-toolbox:not(:-moz-lwtheme)::after {
    background-color: #aabccf;
  }

  #urlbar:not(:-moz-lwtheme),
  .searchbar-textbox:not(:-moz-lwtheme) {
    border-color: hsla(210,54%,20%,.25) hsla(210,54%,20%,.27) hsla(210,54%,20%,.3);
  }

  #urlbar:not(:-moz-lwtheme):not([focused]):hover,
  .searchbar-textbox:not(:-moz-lwtheme):not([focused]):hover {
    border-color: hsla(210,54%,20%,.35) hsla(210,54%,20%,.37) hsla(210,54%,20%,.4);
  }

  #urlbar:not(:-moz-lwtheme)[focused],
  .searchbar-textbox:not(:-moz-lwtheme)[focused] {
    border-color: hsla(206,100%,60%,.65) hsla(206,100%,55%,.65) hsla(206,100%,50%,.65);
  }

  .sidebar-splitter {
    border: 0;
    -moz-border-end: 1px solid #A9B7C9;
    min-width: 0;
    width: 3px;
    background-color: transparent;
    -moz-margin-start: -3px;
    position: relative;
  }

  #appcontent ~ .sidebar-splitter {
    -moz-border-start: 1px solid #A9B7C9;
    -moz-border-end: none;
    -moz-margin-start: 0;
    -moz-margin-end: -3px;
  }

  .menu-accel,
  .menu-iconic-accel {
    color: graytext;
  }

  .chatbar-button,
  chatbar > chatbox {
    border-color: #A9B7C9;
  }
  
}

@media (-moz-windows-compositor) {
  
  .titlebar-button {
    display: none;
  }

  #main-window[sizemode="maximized"] #titlebar-buttonbox {
    -moz-margin-end: 3px;
  }

  #main-window {
    -moz-appearance: -moz-win-borderless-glass;
    background: transparent;
  }

  #appcontent {
    -moz-appearance: -moz-win-exclude-glass;
  }

  
  #main-window[sizemode="normal"] > #titlebar > #titlebar-content:-moz-lwtheme {
    border-top: 2px solid;
    -moz-border-top-colors: @glassActiveBorderColor@ rgba(255,255,255,.6);
  }

  #main-window[sizemode="normal"] > #titlebar > #titlebar-content:-moz-lwtheme:-moz-window-inactive {
    -moz-border-top-colors: @glassInactiveBorderColor@ rgba(255,255,255,.6);
  }

  #main-window[sizemode="normal"] #titlebar-buttonbox:-moz-lwtheme {
    margin-top: -2px;
  }

  #toolbar-menubar:not(:-moz-lwtheme),
  #TabsToolbar:not(:-moz-lwtheme) {
    background-color: transparent !important;
    color: black;
    text-shadow: 0 0 .5em white, 0 0 .5em white, 0 1px 0 rgba(255,255,255,.4);
    border-left-style: none !important;
    border-right-style: none !important;
  }

  
  #main-window[sizemode=normal] #navigator-toolbox::after,
  #main-window[sizemode=normal] #navigator-toolbox > toolbar:not(#toolbar-menubar):not(#TabsToolbar) {
    border-left: 1px solid @toolbarShadowColor@;
    border-right: 1px solid @toolbarShadowColor@;
    background-clip: padding-box;
  }
  #main-window[sizemode=normal] #browser-border-start,
  #main-window[sizemode=normal] #browser-border-end {
    display: -moz-box;
    background-color: @toolbarShadowColor@;
    width: 1px;
  }
  #main-window[sizemode=normal] #browser-bottombox {
    border: 1px solid @toolbarShadowColor@;
    border-top-style: none;
    background-clip: padding-box;
  }

  
  #nav-bar {
    border-top: 1px solid @toolbarShadowColor@ !important;
    background-clip: padding-box;
  }

  

  #main-window[sizemode=normal] #nav-bar,
  #main-window[sizemode=normal] #nav-bar[collapsed=true] + toolbar,
  #main-window[sizemode=normal] #nav-bar[collapsed=true] + #customToolbars + #PersonalToolbar {
    border-top: 1px solid @toolbarShadowColor@;
    border-top-left-radius: 2.5px;
    border-top-right-radius: 2.5px;
    background-clip: padding-box;
  }

  
  #TabsToolbar {
    margin-bottom: -1px;
  }

  #main-window[sizemode=normal] #TabsToolbar {
    padding-left: 1px;
    padding-right: 1px;
  }

  
  #toolbar-menubar:not([autohide="true"]),
  #TabsToolbar,
  #navigator-toolbox > toolbar:not(#toolbar-menubar):-moz-lwtheme {
    -moz-binding: url("chrome://browser/content/customizableui/toolbar.xml#toolbar-drag");
  }

  #appcontent:not(:-moz-lwtheme) {
    background-color: -moz-dialog;
  }

  #main-menubar:not(:-moz-lwtheme):not(:-moz-window-inactive) {
    background-color: rgba(255,255,255,.5);
    border-radius: 4px;
  }

  .tabbrowser-tab:not(:-moz-lwtheme) {
    text-shadow: none;
  }

  #main-window[sizemode=normal] .statuspanel-inner {
    
    padding-left: 1px;
    padding-right: 1px;
  }

  #ctrlTab-panel {
    background: transparent;
    -moz-appearance: -moz-win-glass;
    border-radius: 0;
    border: none;
    font: normal 1.2em "Segoe UI";
    color: black;
    text-shadow: white -1px -1px .35em, white -1px 1px .35em, white 1px 1px .35em, white 1px -1px .35em;
  }

  #tab-view:-moz-lwtheme {
    background-image: url("chrome://browser/skin/tabview/grain.png"),
                      linear-gradient(rgba(255,255,255,0), #CCD9EA 200px, #C7D5E7);
    background-attachment: fixed;
  }
}

@media (-moz-windows-glass) {
  #main-window[sizemode=fullscreen]:not(:-moz-lwtheme) {
    -moz-appearance: none;
    background-color: #556;
  }

  

  #TabsToolbar:not(:-moz-lwtheme) {
    background-image: none;
    position: relative;
  }

  #TabsToolbar:not(:-moz-lwtheme)::before {
    box-shadow: 0 0 30px 30px rgb(174,189,204);
    content: "";
    display: -moz-box;
    height: 0;
    margin: 0 60px; 
    opacity: 0.85;
    position: absolute;
    pointer-events: none;
    top: 50%;
    width: -moz-available;
    z-index: -1;
  }

  
  #navigator-toolbox:not(:-moz-lwtheme) {
    overflow-y: hidden;
  }

  #main-window[sizemode=normal] .tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox > .scrollbox-innerbox:not(:-moz-lwtheme) {
    position: relative;
  }

  
}


@media not all and (-moz-windows-compositor) {
  @media (-moz-windows-default-theme) {
    #main-window {
      background-color: rgb(185,209,234);
    }
    #main-window:-moz-window-inactive {
      background-color: rgb(215,228,242);
    }

    #toolbar-menubar:not([autohide=true]):not(:-moz-lwtheme),
    #TabsToolbar:not(:-moz-lwtheme) {
      -moz-binding: url("chrome://browser/content/customizableui/toolbar.xml#toolbar-drag");
      background-color: transparent;
    }
    #toolbar-menubar[autohide=true] {
      background-color: transparent !important;
    }
  }

  #print-preview-toolbar:not(:-moz-lwtheme) {
    -moz-appearance: -moz-win-browsertabbar-toolbox;
  }
}



#window-controls {
  -moz-box-align: start;
}

#minimize-button,
#restore-button,
#close-button {
  -moz-appearance: none;
  border-style: none;
  margin: 0;
}
#close-button {
  -moz-image-region: rect(0, 49px, 16px, 32px);
}
#close-button:hover {
  -moz-image-region: rect(16px, 49px, 32px, 32px);
}
#close-button:hover:active {
  -moz-image-region: rect(32px, 49px, 48px, 32px);
}

#minimize-button:-moz-locale-dir(rtl),
#restore-button:-moz-locale-dir(rtl),
#close-button:-moz-locale-dir(rtl) {
  transform: scaleX(-1);
}

